--- a/amc.ini
+++ b/amc.ini
@@ -6,12 +6,12 @@ ServerAlias=server1,server2
 Host=http://server1.yourdomain.de:8080
 Username=
 Password=
-DefaultMap=KF-Biolabs
+DefaultMaps=KF-Biolabs,KF-Farmhouse
 WaitForSwitch=300
 
 [server2]
 Host=http://server2.yourdomain.de:8080
 Username=
 Password=
-DefaultMap=KF-Outpost
+DefaultMaps=KF-Outpost,KF-Prison
 WaitForSwitch=300
