--- a/amc.ini
+++ b/amc.ini
@@ -2,12 +2,24 @@
 Interrupt=60
 ServerAlias=server1,server2
 
+[adv01] 
+Message=Thanks for playing on %Servername%! 
+Interval=300
+FirstStartDelay=0
+
+[adv02]
+Message=Checkout our other server! Visit http://uwe.hackerknowledge.de
+Interval=300
+FirstStartDelay=30
+
+
 [server1]
 Host=http://server1.yourdomain.de:8080
 Username=
 Password=
 DefaultMaps=KF-Biolabs,KF-Farmhouse
 WaitForSwitch=300
+ActiveAds=adv01,adv02
 
 [server2]
 Host=http://server2.yourdomain.de:8080
@@ -15,3 +27,4 @@ Username=
 Password=
 DefaultMaps=KF-Outpost,KF-Prison
 WaitForSwitch=300
+ActiveAds=adv01,adv02
